--- a/client/views/main/media-player.html
+++ b/client/views/main/media-player.html
@@ -70,7 +70,7 @@
     remove
   </button>
 
-  <pre class="debug" ng-if="false">
+  <pre class="debug" ng-if="true">
     {{Player.playingItem() | json}}
   </pre>
 </div>
