view likes by soundcloud user

--- a/client/views/sidebar/import/control-search.html
+++ b/client/views/sidebar/import/control-search.html
@@ -1,7 +1,7 @@
 
 <div>
   <h4>search for songs on youtube and soundcloud at the same time</h4>
-  <h4>or enter the URL for a track or video</h4>
+  <h4>or enter the URL for a track, video or soundcloud user</h4>
   <input
       ng-model="newText"
       ng-change="examineText(newText)
