--- a/client/scss/main.scss
+++ b/client/scss/main.scss
@@ -14,6 +14,7 @@
 @import 'main/xyz-item';
 @import 'main/list';
 @import 'main/stream';
+@import 'main/ui-clickable';
 
 @import 'sidebar/sidebar-container';
 
