--- a/client/views/sidebar/sidebar-container.html
+++ b/client/views/sidebar/sidebar-container.html
@@ -8,7 +8,11 @@
   <h3 ng-if="false">
     Our goal is to make the curation, discovery, and enjoyment of networked music streams better.
   </h3>
-  <h3 ng-if="space.id"><a ng-href="stream?playlist={{space.id}}" target="_blank">--&gt stream link</a></h3>
+  <h4 ng-if="space.id">
+    <a ng-href="stream?playlist={{space.id}}" target="_blank">
+      --&gt stream link
+    </a>
+  </h4>
 
   <div ng-if="viewer">
 
@@ -36,7 +40,13 @@
 <!--      (clone / copy songs to my space(s) tools go here)-->
     </div>
     <div ng-if="viewer === 'guest'">
-      ( this is an XYZ space, made by {{owner}}. )
+      ( this is an XYZ space, made by
+      <a ng-if="owner.website"
+         ng-href="{{owner.website}}"
+         target=_blank >
+        {{space.owner.name}}
+      </a>
+      {{!owner.website? space.owner.name : ''}}.)
     </div>
   </div>
 
