--- a/client/views/xyzspace.html
+++ b/client/views/xyzspace.html
@@ -1,12 +1,12 @@
 <div class="xyz-click-screen" ng-click="closeExpanded()">
 </div>
 
-<h2 class="space-title"> {{space.name}} ({{owner.name}})</h2>
+<h2 class="space-title"> {{space.name}} </h2>
 
 
 <div class="xyz-item" ng-repeat="item in Library.songs()"
      ng-if="Library.songs().length > 0"
-     xyz-draggable
+     xyz-draggable="{{viewer}}"
      ng-click="Library.isPlayable(item)? queueIfNotDragging(item): Player.show(item)">
 
   <div class="dot"
