--- a/client/views/xyzspace.html
+++ b/client/views/xyzspace.html
@@ -39,7 +39,7 @@
     </div>
 
 
-    <div class="hover" ui-sref="space.search">
+    <div class="hover" ng-click="clickToOpen()">
 
       no items (click to open search panel)
 
