--- a/client/css/main.css
+++ b/client/css/main.css
@@ -771,7 +771,8 @@ body.old-ie {
   width: 100vh;
   height: 100vh;
   max-height: 100vw;
-  max-width: 100vw; }
+  max-width: 100vw;
+  text-align: center; }
   @media only screen and (min-width: 640px) {
     .main-container {
       position: fixed; } }
@@ -880,7 +881,7 @@ input {
   max-width: 2em; }
 
 .sidebar-container {
-  background-color: lightpink;
+  background: rgba(200, 180, 220, 0.8);
   position: absolute;
   top: 100vw;
   width: 100vw; }
