--- a/client/scss/sidebar/_sidebar-container.scss
+++ b/client/scss/sidebar/_sidebar-container.scss
@@ -1,5 +1,5 @@
 .sidebar-container {
-  background-color: lightpink;
+  background: rgba(200,180,220,0.8);
   position: absolute;
   top: 100vw;//calc(100vh + #{$preview-height});
   width:100vw;
