--- a/client/views/main/landing.html
+++ b/client/views/main/landing.html
@@ -11,7 +11,8 @@
 
 <div ng-if="!User.loggedIn()">
 
-  <h2>register:</h2>
+  <h2>::join xyz::</h2>
+  <h4>create your own xyz space</h4>
   <form ng-submit="User.register(registerData).then(User.login).catch(showError)">
 
     <input ng-model="registerData.email" placeholder="email" type="email" required>
@@ -29,7 +30,6 @@
 
     <input type="submit" value="submit"/>
   </form>
-::join xyz::
 
 </div>
 <br/>
