--- a/client/css/main.css
+++ b/client/css/main.css
@@ -540,7 +540,7 @@ li > ol {
 h1, h2, h3, h4, h5, h6 {
   font-family: "courier new", sans-serif;
   font-weight: 300;
-  margin: 1em 0; }
+  margin: 0.4em 0; }
 
 /**
  * Links
@@ -857,7 +857,7 @@ button {
   min-width: 2em; }
 
 input {
-  margin: 1em;
+  margin: 0.3em;
   min-height: 2em; }
 
 .close-button {
@@ -867,11 +867,17 @@ input {
   cursor: pointer; }
 
 .open-button {
-  right: 0;
+  right: 1em;
+  bottom: 0;
   height: 2em;
   width: 2em;
   max-width: 100px;
-  cursor: pointer; }
+  cursor: pointer;
+  background-color: inherit;
+  position: fixed; }
+  @media only screen and (min-width: 640px) {
+    .open-button {
+      top: 0; } }
 
 .link-button {
   cursor: pointer; }
