--- a/client/scss/main.scss
+++ b/client/scss/main.scss
@@ -11,6 +11,8 @@
 @import 'import/import';
 
 
+
+@import 'main/landing';
 @import 'main/main-container';
 @import 'main/xyz-item';
 @import 'main/list';
