--- a/client/scss/base/_base.scss
+++ b/client/scss/base/_base.scss
@@ -44,7 +44,12 @@ html {
  */
 
 body{
-  background-color:darkgray;
+  background: #f7fbfc; /* Old browsers */
+  background: -moz-linear-gradient(-45deg, #f7fbfc 0%, #d9edf2 40%, #60a09f 100%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(-45deg, #f7fbfc 0%, #d9edf2 40%, #60a09f 100%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(135deg, #f7fbfc 0%, #d9edf2 40%, #60a09f 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#f7fbfc', endColorstr='#60a09f', GradientType=1); /* IE6-9 fallback on horizontal gradient */
+
 }
 body, input, textarea {
     font-family: $base-header-font-family;
