wip - making separate xyz player module - initial scaffolding (gulp, file init, etc)

--- a/client/scss/base/_base.scss
+++ b/client/scss/base/_base.scss
@@ -44,6 +44,8 @@ html {
  */
 
 body{
+  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#f7fbfc+0,d9edf2+40,60a09f+100 */
+
   background: #f7fbfc; /* Old browsers */
   background: -moz-linear-gradient(-45deg, #f7fbfc 0%, #d9edf2 40%, #60a09f 100%); /* FF3.6-15 */
   background: -webkit-linear-gradient(-45deg, #f7fbfc 0%, #d9edf2 40%, #60a09f 100%); /* Chrome10-25,Safari5.1-6 */
