--- a/client/css/xyz-component-style.css
+++ b/client/css/xyz-component-style.css
@@ -12,5 +12,12 @@
 
 .mock-media-provider-view {
   display: inline-block;
-  background-color: black;
-  color: white; }
+  color: white;
+  width: 100%;
+  height: 100%; }
+  .mock-media-provider-view h3, .mock-media-provider-view .mock-media-provider {
+    position: relative;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0; }
