--- a/client/xyz-player-component/mock-media-provider/_mock-media-provider.scss
+++ b/client/xyz-player-component/mock-media-provider/_mock-media-provider.scss
@@ -1,6 +1,16 @@
 
 .mock-media-provider-view{
   display:inline-block;
-  background-color:black;
   color:white;
+  width:100%;
+  height:100%;
+
+
+  h3, .mock-media-provider {
+    position:relative;
+    height:100%;
+    width:100%;
+    top:0;
+    left:0;
+  }
 }
