--- a/client/views/main/landing.html
+++ b/client/views/main/landing.html
@@ -75,8 +75,9 @@
 </div>
 
 
-<center>
-    <div class="xyz-player" xyz-player></div>
+<center><!--
+    <div xyz-player space="56e2ec4cff13560481f347d1" ></div>-->
+    <div xyz-player space="mock" ></div>
 </center>
 
 <span ng-if="error">{{error}}</span>
