--- a/client/views/main/landing.html
+++ b/client/views/main/landing.html
@@ -75,9 +75,9 @@
 </div>
 
 
-<center><!--
-    <div xyz-player space="56e2ec4cff13560481f347d1" ></div>-->
-    <div xyz-player space="mock" ></div>
+<center>
+    <div xyz-player space="56e2ec4cff13560481f347d1" ></div>
+<!--    <div xyz-player space="mock" ></div>-->
 </center>
 
 <span ng-if="error">{{error}}</span>
