youtube player loading and initializing at correct time

--- a/client/views/main/landing.html
+++ b/client/views/main/landing.html
@@ -8,6 +8,13 @@
 </div>
 
 
+
+<div>
+    <!--<div xyz-player space="56e2ec4cff13560481f347d1" ></div>-->
+    <div xyz-player space="mock" ></div>
+</div>
+
+
 <div ng-if="!User.loggedIn()">
 
     <h4>join to create your own xyz space</h4>
@@ -75,9 +82,5 @@
 </div>
 
 
-<center>
-    <div xyz-player space="56e2ec4cff13560481f347d1" ></div>
-<!--    <div xyz-player space="mock" ></div>-->
-</center>
 
 <span ng-if="error">{{error}}</span>
