stream built version has style

--- a/client/views/sidebar/sidebar-container.html
+++ b/client/views/sidebar/sidebar-container.html
@@ -9,7 +9,7 @@
     Our goal is to make the curation, discovery, and enjoyment of networked music streams better.
   </h3>
   <h4 ng-if="space.id">
-    <a ng-href="stream#?playlist={{space.id}}" target="_blank">
+    <a ng-href="stream/index.html#?playlist={{space.id}}" target="_blank">
       --&gt stream link
     </a>
   </h4>
