--- a/xyz-player-component/xyz-component-style.scss
+++ b/xyz-player-component/xyz-component-style.scss
@@ -1,4 +1,5 @@
 .xyz-player{
+  color:white;
   z-index:1;
 
   height:200;
@@ -20,6 +21,8 @@
   }
 
 }
+
+
 
 
 @import "mock-media-provider/mock-media-provider";
