--- a/stream/style.css
+++ b/stream/style.css
@@ -1,7 +1,12 @@
 body{
     background-color:black;
+    color:white;
 }
 
 .powered-by {
+    text-align:center;
+    position:absolute;
+    bottom:0;
+    width:100%;
     color:greenyellow;
 }
