--- a/xyz-player-component/css/xyz-component-style.css
+++ b/xyz-player-component/css/xyz-component-style.css
@@ -1,9 +1,17 @@
 .xyz-player {
+
+
   z-index: 1;
   height: 200;
   width: 300;
   background-color: purple;
-  text-align: center; }
+  text-align: center;
+
+}
+
+.xyz-player *{
+    color: white !important;
+}
   .xyz-player .media-box {
     height: 180;
     width: 270;
