--- a/client/views/main/landing.html
+++ b/client/views/main/landing.html
@@ -1,9 +1,12 @@
 <h1>~ X Y Z ~</h1>
 
 <div ng-repeat="space in publicSpaces">
-  <a ui-sref="space({id:space.id})">
-    {{space.name}} (owned by {{space.owner.name}})
-  </a>
+
+
+    <div ng-include="'views/partials/space-thumbnail.html'">
+
+    </div>
+
   <button ng-click="playSpace(space.id)">play</button>
 </div>
 
