--- a/client/views/partials/space-thumbnail.html
+++ b/client/views/partials/space-thumbnail.html
@@ -1,9 +1,13 @@
 <a ui-sref="space({id:space.id})">
   {{space.name }} {{space.public? '' : '(private)'}}
 </a>
-<div ng-if="false">
+<div ng-if="!space.playlist">
   loading...
 </div>
+<div ng-if="space.playlist">
+    <img ng-src="space.playlist[0].pic" class="space-thumbnail">
+</div>
+
 <pre class="debug" ng-if="false">
   {{space  | json}}
 
