--- a/client/css/main.css
+++ b/client/css/main.css
@@ -763,6 +763,12 @@ body.old-ie {
   width: 100%;
   height: 200px; }
 
+.landing-container .space-thumbnail {
+  display: inline-block; }
+  .landing-container .space-thumbnail img {
+    max-width: 100px;
+    max-height: 100px; }
+
 .main-container {
   position: absolute;
   top: 0;
