--- a/client/scss/main/_landing.scss
+++ b/client/scss/main/_landing.scss
@@ -1,2 +1,12 @@
 .landing-container{
+
+.space-thumbnail {
+
+  display:inline-block;
+  img{
+
+    max-width:100px;
+    max-height:100px;
+  }
+}
 }
