--- a/client/views/partials/space-thumbnail.html
+++ b/client/views/partials/space-thumbnail.html
@@ -1,13 +1,16 @@
 <a ui-sref="space({id:space.id})">
-  {{space.name }} {{space.public? '' : '(private)'}}
+    {{space.name }} {{space.public? '' : '(private)'}}
 </a>
+
+<span ng-if="space.owner"> (owned by {{space.owner.name}})</span>
 <div ng-if="!space.playlist">
-  loading...
+    loading...
 </div>
 <div ng-if="space.playlist">
-    <img ng-src="space.playlist[0].pic" class="space-thumbnail">
+    <img ng-src="{{space.playlist[0].pic}}" class="space-thumbnail">
 </div>
 
+<button ng-click="playSpace(space.id)">play</button>
 <pre class="debug" ng-if="false">
   {{space  | json}}
 
