--- a/client/css/main.css
+++ b/client/css/main.css
@@ -763,11 +763,20 @@ body.old-ie {
   width: 100%;
   height: 200px; }
 
-.landing-container .space-thumbnail {
-  display: inline-block; }
-  .landing-container .space-thumbnail img {
-    max-width: 100px;
-    max-height: 100px; }
+.landing-section {
+  display: block;
+  margin-bottom: 3em; }
+  .landing-section .space-thumbnail {
+    height: 120px;
+    vertical-align: top;
+    display: inline-block; }
+    .landing-section .space-thumbnail img {
+      width: 100px; }
+
+.login-info {
+  position: absolute;
+  bottom: 0;
+  width: 100%; }
 
 .main-container {
   position: absolute;
