--- a/client/views/main/landing.html
+++ b/client/views/main/landing.html
@@ -1,23 +1,21 @@
-<div class="landing-container">
-    <h1>~ X Y Z ~</h1>
+<div>
+    <div class="landing-section">
+        <h1>~ X Y Z ~</h1>
 
-    <div ng-repeat="space in publicSpaces">
-
-
-        <div ng-include="'views/partials/space-thumbnail.html'" class="space-thumbnail">
+        <div ng-repeat="space in publicSpaces"
+             ng-include="'views/partials/space-thumbnail.html'"
+             class="space-thumbnail">
 
         </div>
 
+        <div xyz-player
+             space="{{playingSpace()}}"
+             ng-if="playingSpace()">
+
+        </div>
+        {{playingSpace()? playingSpace() : '' }}
     </div>
-
-    <div xyz-player
-         space="{{playingSpace()}}"
-         ng-if="playingSpace()">
-
-    </div>
-    {{playingSpace()? playingSpace() : '' }}
-
-    <div ng-if="!User.loggedIn()">
+    <div ng-if="!User.loggedIn()" class="landing-section">
 
         <h4>join to create your own xyz space</h4>
         <form ng-submit="clearError(registerData).then(User.register).then(User.login).catch(showError)">
@@ -42,45 +40,54 @@
     <br/>
     <hr/>
     <br/>
-    <div ng-if="User.loggedIn()" class="landing-container">
+    <div ng-if="User.loggedIn()" class="landing-section">
 
         <br/>
 
         <ul ng-if="User.spaces">
             <h2 ng-if="User.hasSpaces()">{{User.get().name}}'s spaces:</h2>
-            <li ng-repeat="space in User.spaces">
+            <li ng-repeat="space in User.spaces"
+                ng-include="'views/partials/space-thumbnail.html'"
+                class="space-thumbnail">
 
-                <div ng-include="'views/partials/space-thumbnail.html'">
-
-                </div>
             </li>
         </ul>
-  <span ng-if="!User.hasSpaces()">
-    create your first space here:<br/>
-  </span>
+      <span ng-if="!User.hasSpaces()">
+        create your first space here:<br/>
+      </span>
 
-        <input ng-model="newSpace.name" placeholder="new space name"></input>
-        <br/>
-        <button ng-click="User.addSpace(newSpace).catch(showError)">add new space</button>
-
-
-        <br/>
-        <hr/>
-        <br/>
-        You are logged in as {{User.get().name}}.
-        <br/>
-  <span ng-if="User.get().website"><!-- todo: fix website links (add http if not there) -->
-    Your website is {{User.get().website}}
-  </span>
-        <form ng-submit="User.update(new).catch(showError)">
-
-            <input ng-model="new.name" placeholder="update name">
-            <input ng-model="new.website" placeholder="update website">
+        <div ng-if="isAdding()">
+            <input ng-model="newSpace.name" placeholder="new space name"></input>
             <br/>
-            <input type="submit" value="update data">
+            <button ng-click="User.addSpace(newSpace).then(resetAdding).catch(showError)">add new space</button>
+        </div>
+        <div ng-if="!isAdding()">
+            <a ng-click="setAdding()"> + new space</a>
+        </div>
+        <div ng-show="isAdding()">
+            <a ng-click="resetAdding()"> (nevermind)</a>
+        </div>
 
-        </form>
-        <button ng-click="User.logout().catch(showError)">Log out</button>
+        <br/>
+        <div class="login-info">
+
+            Logged in as {{User.get().name}}.
+            <br/>
+              <span ng-if="User.get().website"><!-- todo: fix website links (add http if not there) -->
+                Your website is {{User.get().website}}
+              </span>
+            <form ng-submit="User.update(new).catch(showError)" ng-if="isEditing()">
+
+                <input ng-model="new.name" placeholder="update name">
+                <input ng-model="new.website" placeholder="update website">
+                <br/>
+                <input type="submit" value="update data">
+
+            </form>
+            <div ng-if="!isEditing()"><a ng-click="setEditing()"> (edit)</a></div>
+            <div ng-show="isEditing()"><a ng-click="resetEditing()"> (nevermind)</a></div>
+            <button ng-click="User.logout().catch(showError)">Log out</button>
+        </div>
     </div>
 
 
