--- a/xyz-player-component/css/xyz-component-style.css
+++ b/xyz-player-component/css/xyz-component-style.css
@@ -2,17 +2,27 @@
   color: white;
   z-index: 1;
   height: 200;
-  width: 300;
+  width: 100vw;
   background-color: purple;
-  text-align: center; }
+  text-align: center;
+  position: fixed;
+  bottom: 3em; }
   .xyz-player .media-box {
     height: 180;
-    width: 270;
+    width: 100%;
     display: inline-block;
     background-color: lightgoldenrodyellow; }
   .xyz-player .media-controls {
     position: fixed;
-    bottom: 0; }
+    bottom: 0;
+    height: 3em;
+    text-align: center; }
+    .xyz-player .media-controls button {
+      color: green; }
+
+#xyz-soundcloud-iframe, #widget2 {
+  width: 100%;
+  height: 150px; }
 
 .mock-media-provider-view {
   display: inline-block;
